updated collectors toList